# talks

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  vitest.config.ts
pytalks/: .gitignore  CLAUDE.md  custom_config.yml  main.py  pyproject.toml  registry.py  talk_types.py
pytalks/talks/: base.py
pytalks/talks/perceptron/: __init__.py
pytalks/talks/perceptron/components/: network.py  neuron.py
pytalks/talks/perceptron/scenes/: __init__.py  s01_title.py  s02_single_perceptron.py  s03_activation.py  s04_perceptron_math.py  s05_multi_layer.py  s06_forward_pass.py
pytalks/talks/proc_nat_lang_dl_tech/: CLAUDE.md  __init__.py
pytalks/talks/proc_nat_lang_dl_tech/scenes/: __init__.py  s01_title.py  s02_contents.py  s03_nlp_task_formulations.py  s04_neural_lang_models.py
src/: main.tsx
src/components/picker/: TagBadge.module.css  TalkCard.tsx
src/components/player/: DeckPlayer.module.css  PresenterView.tsx  SlideProgress.module.css
src/components/slides/: ContentSlide.tsx  FullscreenSlide.tsx  SplitSlide.tsx
src/lib/: useKeyNav.ts
src/lib/__tests__/: useBroadcast.test.ts  useFullscreen.test.ts  usePresenter.test.ts
src/routes/: TalkPicker.module.css  TalkPicker.tsx  TalkPlayer.tsx
src/routes/__tests__/: TalkPlayer.test.tsx
src/test/integration/: presenter-sync.test.tsx
src/types/: index.ts
talks/demo/: index.ts
talks/demo/components/: SampleDiagram.tsx  SampleScene3D.tsx
talks/demo/slides/: 01-title.tsx  04-code.tsx  05-math.tsx  09-3d-scene.tsx  (+1 more)
web/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
(+51 files in other folders)
